@@ -4,10 +4,15 @@ import argparse
 
 def main():
     parser = argparse.ArgumentParser()
-    parser.add_argument('-u','--piccolo-url',metavar='URL',default='http://localhost:8080',help='set the URL of the piccolo server, default http://localhost:8080')
+    group = parser.add_mutually_exclusive_group()
+    group.add_argument('-u','--piccolo-url',metavar='URL',default='http://localhost:8080',help='set the URL of the piccolo server, default http://localhost:8080')
+    group.add_argument('-x','--xbee-address',metavar='ADR',help="the address of the xbee radio")
     args = parser.parse_args()
 
-    connection = ('http',args.piccolo_url)
+    if args.xbee_address != None:
+        connection = ('xbee',args.xbee_address)
+    else:
+        connection = ('http',args.piccolo_url)
 
     player.main(connection)
 
