@@ -1,3 +1,8 @@
+2016-04-28 Magnus Hagdorn
+ * piccolo2/player/PlayerApp.py: attempt to catch status if the xbee is busy
+   communicating
+ * piccolo2/pplayer.py: add command line option to connect to xbee
+
 2016-04-27 Magnus Hagdorn
  * piccolo2/player/PlayerApp.py: hookup xbee client
 
